# ynd

./: .gitignore  ninja_downloader.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
ynd/: ToDo.txt  baixa_playlist_audio.py  ninja_downloader.py  ninja_downloader_alunos.py  ninja_downloader_internet.py  ynd.old.py
