[tool.poetry]
name = "ynd"
version = "1.0.0"
description = ""
authors = ["Ricardo Roson <rroson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pytube = "^15.0.0"
moviepy = "^1.0.3"
streamlit-js-eval = "^0.1.7"
emoji = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
